<resources>
    <string name="app_name">FlyNBuy</string>

    <string name="hello_world">Hello world!</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="picture">Picture</string>
    <string name="register">Register</string>
    <string name="action_settings">Settings</string>
</resources>
